--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "movielens",
   "version": "0.2.0",
   "description": "Promise based Node API for the movielens unpublished API",
-  "main": "dist/index.js",
-  "repository": "git@github.com:longseespace/movielens.git",
+  "main": "index.js",
+  "repository": "git@github.com:th3l0g4n/movielens.git",
   "author": "Long Nguyen <long@nomadreact.com>",
   "license": "MIT",
   "scripts": {
